# extensions-PhotonMapping

./: CMakeLists.txt  PhotonMapping.dist  Setup.cmake
Math/CUDA/: Matrix.h
Renderers/OpenGL/: PhotonRenderingView.cpp  PhotonRenderingView.h
Resources/CUDA/: CUDADataBlock.h
Scene/: CUDAMeshNode.cu  CUDAMeshNode.h  KDNode.cu  KDNode.h  KDPhotonUpperNode.cu  KDPhotonUpperNode.h  OscCUDAMeshNode.cu  OscCUDAMeshNode.h  PhotonLowerNode.cu  PhotonLowerNode.h  PhotonNode.cu  PhotonNode.h  PhotonUpperNode.cu  PhotonUpperNode.h  TransparentNode.cpp  TransparentNode.h  TriangleLowerNode.h  TriangleNode.cu  TriangleNode.h  TriangleUpperNode.cu  TriangleUpperNode.h
Utils/: PhotonMapUtils.h
Utils/CUDA/: AABBVar.cu  AABBVar.h  BruteTracer.cu  BruteTracer.h  GeometryList.cu  GeometryList.h  IRayTracer.cu  IRayTracer.h  ITriangleMapCreator.h  IntersectionTests.h  KDTree.h  KDTreeConstruction.cu  NodeChildren.cu  NodeChildren.h  PhotonKDTree.cu  PhotonKDTree.h  PhotonMap.cu  PhotonMap.h  PhotonMapCheck.cu  PhotonMapLowerNodes.cu  Point.h  PrimitiveUtils.h  Raytracer.cu  Raytracer.h  Segments.cu  Segments.h  SharedMemory.h  ShortStack.cu  ShortStack.h  SplitVar.cu  SplitVar.h  SplittingPlanes.cu  SplittingPlanes.h  TriangleMap.cu  TriangleMap.h  TriangleMapBalancedCreator.cu  TriangleMapBalancedCreator.h  TriangleMapBalancedFast.cu  TriangleMapBalancedFast.h  TriangleMapBitmapCreator.cu  (+15 more)
Utils/CUDA/Kernels/: ColorKernels.h  DeviceVars.h  EmptySpaceSplitting.h  FinalBoundingBox.hcu  LowerNodes.h  LowerTriangleMap.h  PhotonMapDeviceVars.h  PhotonSort.h  PreprocessLowerNodes.h  ReduceBoundingBox.hcu  ReduceSegments.h  SortUpperChildren.hcu  TriangleKernels.h  TriangleUpper.h  TriangleUpperChildren.h  TriangleUpperSegment.h  UpperNodeBoundingBox.h  UpperNodeChildren.hcu  UpperNodeMapToGL.hcu  UpperNodeSplit.hcu
Utils/CUDA/Photon/: FinalBoundingBox.h  KDPhotonUpperNode.cu  KDPhotonUpperNode.h  KDTreeConstruction.cu
